workaround lib functions in html files

--- a/calendarSidebar.html
+++ b/calendarSidebar.html
@@ -77,7 +77,7 @@
     ></script>
     <script>
       function afterLoad() {
-        google.script.run.withSuccessHandler(calendarReturned).wbLib.getCalendarList()
+        google.script.run.withSuccessHandler(calendarReturned).getCalendarList()
       }
 
       function afterButtonClicked() {
